# classes

audio_player/: CMakeLists.txt
audio_player/include/: audio_player.h  state.h  track.h
audio_player/src/: CMakeLists.txt  audio_player.cpp  main.cpp  track.cpp
desktop_simulator/: CMakeLists.txt
desktop_simulator/include/: desktop.h  window.h
desktop_simulator/src/: CMakeLists.txt  desktop.cpp  main.cpp  window.cpp
mobile_phone/: CMakeLists.txt
mobile_phone/include/: contact.h  phone.h  phone_number.h
mobile_phone/src/: CMakeLists.txt  a.out  contact.cpp  main.cpp  phone.cpp  phone_number.cpp
